<resources>
    <string name="app_name">GeckoView Example</string>
    <string name="activity_label">GeckoView Example</string>
    <string name="location_hint">Enter URL or search keywords...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="clear_field">Clear</string>
    <string name="request_geolocation">Share location with "%1$s"?</string>
    <string name="request_notification">Allow notifications for "%1$s"?</string>
    <string name="request_video">Share video with "%1$s"</string>
    <string name="request_audio">Share audio with "%1$s"</string>
    <string name="request_media">Share video and audio with "%1$s"</string>
    <string name="media_back_camera">Back camera</string>
    <string name="media_front_camera">Front camera</string>
    <string name="media_microphone">Microphone</string>
    <string name="media_other">Unknown source</string>

    <string name="new_view">New GeckoView</string>
    <string name="crash_native">Native</string>
    <string name="crash_java">Java</string>
    <string name="crash_content_native">Content (Native)</string>
    <string name="multiprocess">Multiprocess</string>
    <string name="tracking_protection">Tracking Protection</string>
    <string name="private_browsing">Private Browsing</string>
    <string name="forward">Forward</string>
    <string name="reload">Reload</string>
    <string name="crashed_title">GeckoView Example Crashed</string>
    <string name="crashed_text">Tap to report to Mozilla.</string>
    <string name="crashed_ignore">Ignore</string>
    <string name="find">Find</string>
    <string name="find_link">Find Link</string>
    <string name="clear">Clear</string>
    <string name="highlight">Highlight All</string>
    <string name="dim">Dim Page</string>
    <string name="outline">Link Outline</string>
</resources>
